build/test/lib/errors/lazy-options.mjs
export const name = "LazyOptions";
export function createLazyOptionsError(target) {
    return new Error(name);
}
